--- a/views/perfil/admin.html
+++ b/views/perfil/admin.html
@@ -14,7 +14,7 @@
 					<th>Nombre</th>
 					<th>Descripción</th>
 					<th>Documento</th>
-					<th>Opciones</th>
+					<th style="width: 190px">Opciones</th>
 				</tr>
 				<tr>
 					<th>#</th>
