--- a/views/perfil/view.html
+++ b/views/perfil/view.html
@@ -108,7 +108,8 @@
 			</table>
 		</div>
     </uib-tab>
-    <!-- <uib-tab index="2" heading="Long Justified">Long Labeled Justified content</uib-tab> -->
+    <uib-tab index="2" heading="pdf">
+    <embed  ng-class="{loader:!pdf}" ng-src="'{{pdf}}'" type="application/pdf" /></uib-tab>
   </uib-tabset>
 
 	</div>
