Build and config

--- a/views/trabajador/evaluacion.html
+++ b/views/trabajador/evaluacion.html
@@ -17,7 +17,7 @@
 					
 				</script>
 					<img ng-init="imagen=this;console.log('imagen')"
-						ng-src="{{parse.Url(ficha.pregunta.recursos.sources[0].src)|dinamicSource}}" 
+						ng-src="{{parse.Url(ficha.imagen.src)|dinamicSource}}" 
 						class="img-rounded" 
 						style="width: auto;max-width: 664px;height:250px;" id="imagePregunta" >
 				</center>
