--- a/views/do/evaluation.html
+++ b/views/do/evaluation.html
@@ -19,7 +19,7 @@
 						style="width: auto;max-width: 664px;height:250px;">
 					</center>
 				</div>
-				<div ng-switch-default><pre>No es compatibles {{ficha.pregunta.recursos | json}}</pre></div>
+				<div ng-switch-default></div>
 			</div>
 			<div class="col-md-5">
 				<strong>Respuesta :</strong>
