--- a/views/do/finished.html
+++ b/views/do/finished.html
@@ -7,8 +7,17 @@
 	<div class="col-sm-8 col-sm-offset-2" style="position: relative;top: 20px;">
 		<div class="jumbotron" style="padding-bottom: 80px;">
 			<h2>¡Gracias por sus respuestas!</h2>
-			<p class="text-justify">Ha finalizado con éxito el proceso de evaluación de alfabetización digital.</p>
-				<a href="#!/welcome" class="btn btn-success pull-right">Terminar</a>
+			<!-- <p class="text-justify">Ha finalizado con éxito el proceso de evaluación de alfabetización digital.</p> -->
+			<form>
+				<div class="form-group">
+					<label class="control-label">¿Tienes alguna sugerencia?</label>
+					<!-- <input type="text" class="form-control"> -->
+					<textarea ng-model="comentario" class="form-control" rows="3" placeholder="Ingrese alguna sugerencia..."></textarea>
+				</div>
+				<div class="form-group">
+					<button ng-click="finished()" class="btn btn-success pull-right">Terminar</button>					
+				</div>
+			</form>
 		</div>
 	</div>
 </div>
